<resources>
    <string name="app_name">Sudoku Solver</string>
    <string name="version_name" translatable="false">1.0</string>

    <string name="title_activity_main">@string/app_name</string>
    <string name="title_fragment_camera_dialog">Find sudoku</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_camera_directions">
        Position the sudoku puzzle inside the square and take a picture.
    </string>
    <string name="header_licenses">Licenses</string>

    <string name="description_expand_collapse_indicator">
        Expands and collapses the list item.
    </string>
    <string name="description_image_preview">
        When visible, shows the picture just taken. When invisible, shows the camera preview.
    </string>
    <string name="description_flash_button">
        Toggles the camera flash, if available.
    </string>
    <string name="description_lots_of_love">
        Created with lots of love by Allan Rodriguez ❤
    </string>
    <!-- HTML needs to be in one line or else spaces appear at the beginning of the TextView it's used on. -->
    <string name="description_source_code">Source code for this app can be found on <a href="https://github.com/allanrodriguez/SudokuSolver">GitHub</a>!</string>

    <string name="action_about">About</string>
    <string name="action_clear">Clear puzzle</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_enter_puzzle">Enter puzzle</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_solve">Solve</string>

    <string name="text_camera_error">
        An error occurred with the camera.
    </string>
    <string name="text_clear_sudoku">
        Are you sure you want to clear the sudoku puzzle?
    </string>
    <string name="text_sudoku_cleared">
        Sudoku puzzle was cleared.
    </string>
    <string name="text_sudoku_empty">
        The sudoku puzzle is empty.
    </string>
    <string name="text_sudoku_full">
        There are no cells to solve.
    </string>

    <string name="empty"> </string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
